# CMakeList.txt : CMake project for CMakeTest, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTest WIN32 "CMakeTest.cpp" "Engine/Engine.cpp")

# TODO: Add tests and install targets if needed.
