# CMakeList.txt : CMake project for VenisEngineSource, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (VenisEngineSource WIN32 "VenisEngineSource.cpp" "VenisEngineSource.h")

# TODO: Add tests and install targets if needed.
